--- a/css/style.css
+++ b/css/style.css
@@ -306,6 +306,9 @@ header .follow a:hover{
     width:85%;
 }
 .about .row-2 .skills .progress:nth-child(6) .bar span{
+    width:85%;
+}
+.about .row-2 .skills .progress:nth-child(7) .bar span{
     width:10%;
 }
 
